--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -12,4 +12,4 @@ block content
       p We know what goes into planning a wedding and we want to make sure that hiring a photographer/videographer is the easiest part. We want to give you quality memories of the day you spent months planning without feeling like you have to take out a loan to pay for them.
       p So reach out. Email, telegram, raven, whatever.
       p We're excited to chat.
-      a.btn(href="/contact") Contact Us
+      //- a.btn(href="/contact") Contact Us
