--- a/src/views/contact.pug
+++ b/src/views/contact.pug
@@ -4,9 +4,10 @@ block content
   section#contact.contact
     div#form-container.ghost
       div#form.form
-        h1 We'd love to work with you
-        p Tell us a little bit about you and your loved one. We'd love to start a conversation about capturing your perfect day.
-        div.hb-p-5dc09250c90ec70016bcd026-1
-        img(height="1" width="1" style="display:none" src="https://www.honeybook.com/p.png?pid=5dc09250c90ec70016bcd026")
-        script
-          include ./partials/honeybook.js
+        h1 We've loved working with you
+        p Meg and I cannot thank all of our clients enough for the love and support they've given to us over the last three years, but we've decided to move on to other dreams and so we will not be accepting any clients indefinitely. Thank you so much.
+        //- p Tell us a little bit about you and your loved one. We'd love to start a conversation about capturing your perfect day.
+        //- div.hb-p-5dc09250c90ec70016bcd026-1
+        //- img(height="1" width="1" style="display:none" src="https://www.honeybook.com/p.png?pid=5dc09250c90ec70016bcd026")
+        //- script
+        //-   include ./partials/honeybook.js
