--- a/src/views/partials/_nav.pug
+++ b/src/views/partials/_nav.pug
@@ -11,7 +11,7 @@ header.nav-header
         a.nav__link(href='/#home') Stories
       li.nav__item
         a.nav__link(href='/about') About
+      //- li.nav__item
+      //-   a.nav__link(href='/investment') Investment
       li.nav__item
-        a.nav__link(href='/investment') Investment
-      li.nav__item
-        a.nav__link(href='/contact') Contact
+        a.nav__link(href='/contact') Thank You
